test(frontier): verify complete source state